--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <div id="hero">
-            <div>
+            <div class="container">
                 <header id="header">
                     <div id="logo-container">
                         <img src="logo.svg" id="logo"/>
@@ -41,6 +41,39 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container">
+
+            <h2 class="section-title">Начните разговаривать с первого занятия</h2>
+            <div class="benefit">
+                <i class="fa-regular fa-comment-dots"></i>
+                <p class="benefit-item">Разговорная речь</p>
+                <p class="benefit-text">Никаких грамматических заданий по учебнику! Изучайте язык в живой речи.</p>
+            </div>
+            <div class="benefit">
+                <i class="fa-solid fa-globe"></i>
+                <p class="benefit-item">Современный язык</p>
+                <p class="benefit-text">Изучайте актуальный язык, общаясь с преподавателем на современные темы</p>
+            </div>
+            <div class="benefit">
+                <i class="fa-regular fa-user"></i>
+                <p class="benefit-item">Индивидуальные занятия</p>
+                <p class="benefit-text">Преподаватель занимается только с Вами и Вы учитесь намного быстрее.</p>
+            </div>
+
+            <div class="about-us">
+                <h3 class="about-us-title">Мы научим говорить уверенно!</h3>
+                <p class="about-us-text">
+                    Мы считаем, что главная задача языка - помочь нам общаться друг с другом. Поэтому на наших занятиях мы отдаем приоретет разговорной речи и навыкам аудирования.
+                </p>
+                <p class="about-us-text">
+                    Мы не изучаем грамматические правила по учебнику, мы не выполняем задания, где нужно раскрыть скобки или поставить правильный артикль, мы занимаем самым главным - разговариваем. Мы разговариваем на самые актуальные и интересные темы, чтобы вы могли пополнить свой словарным запас актуальными современными словами.
+                </p>
+            </div>
+
+            <img class="about-us-image" src="landing-materials/group-people.jpg" />
+            
         </div>
 
         
