rates section added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="container">
             <div class="orange-section">
-                <h2 class="orange-section-title">Запишитесь на бесплатный урок уже сегодня</h2>
+                <h2 class="section-title">Запишитесь на бесплатный урок уже сегодня</h2>
                 <p class="orange-section-text">Преподаватель определит ваш уровень и Вы пройдете полноценный первый урок</p>
                 <input type="text" name="firstname" value="Ваше имя">
                 <input type="text" name="phone" value="Ваш телефон">
@@ -92,7 +92,7 @@
 
         <div class="container">
             <div class="grey-section">
-                <h2 class="grey-section-title">У нас уже более 500 довольных учеников!</h2>
+                <h2 class="section-title">У нас уже более 500 довольных учеников!</h2>
                 <div class="reviews">
                     <div class="review">
                         <p class="review-title">Ольга Морозова</p>
@@ -111,6 +111,53 @@
                         <p class="review-text">
                             Мне очень нравится методика преподавания, на уроках мы очень много общаемся и не выполняем скучных задания из учебников. Благодаря занятиям мой язык стал более живой, современный, я узнала про сленг, а на прошлой неделе познакомилась с иностранцем! 
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2 class="section-title">Наши абонементы</h2>
+            <div class="rates">
+                <div class="rate">
+                    <p class="rate-title">1 месяц</p>
+                    <p class="rate-price">12 000 руб/ 8 уроков</p>
+                    <ul class="rate-details">
+                        <li>8 уроков</li>
+                        <li>занятия 2 раза в неделю</li>
+                        <li>индивидуальный уроки</li>
+                    </ul>
+                    <div> 
+                        <button class="button-small">Записаться</button>
+                    </div>
+                </div>
+            
+                <div class="rate">
+                    <p class="rate-title">3 месяца</p>
+                    <p class="rate-price">32 000 руб/ 24 урока</p>
+                    <ul class="rate-details">
+                        <li>24 урока</li>
+                        <li>занятия 2 раза в неделю</li>
+                        <li>индивидуальный уроки</li>
+                        <li>бесплатный разговорный клуб</li>
+                    </ul>
+                    <div> 
+                        <button class="button-small">Записаться</button>
+                    </div>
+                </div>
+
+                <div class="rate">
+                    <p class="rate-title">6 месяцев</p>
+                    <p class="rate-price">55 000 руб/ 58 уроков</p>
+                    <ul class="rate-details">
+                        <li>58 уроков</li>
+                        <li>занятия 2 раза в неделю</li>
+                        <li>индивидуальный уроки</li>
+                        <li>бесплатный разговорный клуб</li>
+                        <li>бесплатная заморозка абонимента</li>
+                    </ul>
+                    <div> 
+                        <button class="button-small">Записаться</button>
                     </div>
                 </div>
             </div>
