contact section added

--- a/index.html
+++ b/index.html
@@ -163,10 +163,21 @@
             </div>
         </div>
 
-
-
-        
-        
-
+        <div class="container">
+            <div class="contacts">
+                <div class="phone">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+7 (123) 456-78-90</p>                  
+                </div>
+                <div class="social-icons">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+                <div class="email">
+                    <p>english_house@email.com</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
