--- a/index.html
+++ b/index.html
@@ -13,36 +13,36 @@
     </head>
 
     <body>
-        <div id="hero">
-            <div class="container">
-                <header id="header">
-                    <div id="logo-container">
-                        <img src="logo.svg" id="logo"/>
-                    </div>
+        <div class="container">
+            <div class="header">
+                <div id="logo-container">
+                    <img src="logo.svg" id="logo"/>
+                </div>
 
-                    <div class="navigation">
-                        <div class="navigation-item">Стоимость</div>
-                        <div class="navigation-item">Отзывы</div>
-                    </div>
+                <div class="navigation">
+                    <div class="navigation-item">Стоимость</div>
+                    <div class="navigation-item">Отзывы</div>
+                </div>
 
-                    <div class="phone">
-                        <i class="fa-solid fa-phone"></i>
-                        <p>+7 (123) 456-78-90</p>
-                    </div>
-                </header>
-
-                <div>
-                    <h1 class="hero-title">Лучший способ заговорить на английском</h1>
-                    <p class="hero-text">Занимайся онлайн в удобное время в любом месте! Запишитесь на бесплатный пробный урок уже сегодня.</p>
-                    <div> 
-                        <button class="button-large">
-                            Записаться на пробный урок
-                        </button>
-                    </div>
+                <div class=icon">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+7 (123) 456-78-90</p>
                 </div>
             </div>
-        </div>
 
+            <div>
+                <h1 class="hero-title">Лучший способ заговорить на английском</h1>
+                <p class="hero-text">Занимайся онлайн в удобное время в любом месте! Запишитесь на бесплатный пробный урок уже сегодня.</p>
+                <div> 
+                    <button class="button-large">
+                        Записаться на пробный урок
+                    </button>
+                </div>
+            </div>
+
+            <div id="hero"></div> 
+        </div>     
+       
         <div class="container">
 
             <h2 class="section-title">Начните разговаривать с первого занятия</h2>
