--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <div class="navigation-item">Отзывы</div>
                 </div>
 
-                <div class=icon">
+                <div class="icon">
                     <i class="fa-solid fa-phone"></i>
-                    <p>+7 (123) 456-78-90</p>
+                    <p class="phone">+7 (123) 456-78-90</p>
                 </div>
             </div>
 
