button's style added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1 class="hero-title">Лучший способ заговорить на английском</h1>
                 <p class="hero-text">Занимайся онлайн в удобное время в любом месте! Запишитесь на бесплатный пробный урок уже сегодня.</p>
                 <div> 
-                    <button class="button-large">
+                    <button class="button button-large">
                         Записаться на пробный урок
                     </button>
                 </div>
@@ -83,7 +83,7 @@
                 <input type="text" name="firstname" value="Ваше имя">
                 <input type="text" name="phone" value="Ваш телефон">
                 <div> 
-                    <button class="button-large">
+                    <button class="button button-large">
                         Записаться на пробный урок
                     </button>
                 </div>
@@ -128,7 +128,7 @@
                         <li>индивидуальный уроки</li>
                     </ul>
                     <div> 
-                        <button class="button-small">Записаться</button>
+                        <button class="button button-small">Записаться</button>
                     </div>
                 </div>
             
@@ -142,7 +142,7 @@
                         <li>бесплатный разговорный клуб</li>
                     </ul>
                     <div> 
-                        <button class="button-small">Записаться</button>
+                        <button class="button button-small">Записаться</button>
                     </div>
                 </div>
 
@@ -157,7 +157,7 @@
                         <li>бесплатная заморозка абонимента</li>
                     </ul>
                     <div> 
-                        <button class="button-small">Записаться</button>
+                        <button class="button button-small">Записаться</button>
                     </div>
                 </div>
             </div>
